--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>
-            Ayoo???
-        </h1>
-        <h2>
-            Yoooo
-        </h2>
-    </body>
+<body>
+
+<h2>HTML Forms</h2>
+
+<form action="localhost/food-api/API/user/GetUser.php">
+  <label for="id">ID</label><br>
+  <input type="text" id="id" name="id" value=""><br>
+  <input type="submit" value="Submit">
+</form> 
+
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+
+</body>
 </html>
