--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="localhost/food-api/API/user/GetUser.php">
+<form action="../food-api/API/user/getUser.php">
   <label for="id">ID</label><br>
   <input type="text" id="id" name="id" value=""><br>
   <input type="submit" value="Submit">
