--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 
 <h2>HTML Forms</h2>
 
-<form action="../food-api/API/user/getUser.php">
-  <label for="id">ID</label><br>
-  <input type="text" id="id" name="id" value=""><br>
+<form action="../food-api/API/user/login.php">
+  <label for="email">email</label><br>
+  <input type="text" id="email" name="email" value=""><br>
+  <label for="password">Password</label><br>
+  <input type="password" id="password" name="password" value=""><br>
   <input type="submit" value="Submit">
 </form> 
 
