--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>jQuery.post demo</title>
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-</head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>jQuery.post demo</title>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  </head>
 <body>
- 
+
+<h2>Login</h2>
+
 <form action="../food-api/API/user/login.php" id="loginForm">
-  <input type="text" name="email" placeholder="Search...">
-  <input type="password" name="password" placeholder="Search...">
-  <input type="submit" value="Search">
-</form>
-<!-- the result of the search will be rendered inside this div -->
+  <label for="email">email</label><br>
+  <input type="text" id="email" name="email" placeholder="e-mail"><br>
+  <label for="password">Password</label><br>
+  <input type="password" id="password" name="password" placeholder="password"><br>
+  <input type="submit" value="Submit">
+</form> 
+
 <div id="result"></div>
- 
+
 <script>
-// Attach a submit handler to the form
-$( "#loginForm" ).submit(function( event ) {
- 
-  // Stop form from submitting normally
-  event.preventDefault();
- 
-  // Get some values from elements on the page:
-  var $form = $( this ),
+
+$("#loginForm").submit(function(event){
+    event.preventDefault();
+    var $form = $( this ),
     email = $form.find( "input[name='email']" ).val(),
     password = $form.find( "input[name='password']" ).val(),
     url = $form.attr( "action" );
- 
-  // Send the data using post
-  var posting = $.post( url, { email: email, password: password } );
- 
-  // Put the results in a div
-  posting.done(function( data ) {
+
+    var posting = $.post( url, { email: email, password: password } );
+
+    posting.done(function( data ) {
     var content = $( data ).find( "#content" );
     $( "#result" ).empty().append( content );
-  });
+    });
 });
+
 </script>
- 
+
+
 </body>
+
+</html>
