--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p>Inserisci la tua password per continuare</p>
 
                     <div class="form-input">
-                        <p><input class="form-input-text" type="password" name="password" placeholder="Password"></p>
+                        <p><input id="signin_input_password" class="form-input-text" type="password" name="password" placeholder="Password"></p>
                     </div>
                     <div class="form-submit">
                         <button id="signin_goto_step_email" class="form-back-button">
@@ -75,8 +75,10 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script src="/auth/res/scripts/swiper.js"></script>
-    <script src="/auth/res/scripts/ui_logic.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="res/scripts/auth.js"></script>
+    <script src="res/scripts/swiper.js"></script>
+    <script src="res/scripts/ui_logic.js"></script>
 </body>
 
 </html>
