chiamata api login

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         </div>
 
         <div class="footer">
-            Usando Paninosoft accetti i <a href="#">Termini di Servizio</a> e la <a href="#">Politica sulla Privacy</a>
+            Usando Paninosoft accetti&nbsp;i&nbsp;<a href="#">Termini di Servizio</a> e&nbsp;la&nbsp;<a href="#">Politica sulla Privacy</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/swiper.js"></script>
+    <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/ui_logic.js"></script>
 </body>
 
