cambiato il meccanismo di restituzione dei dati

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                         </button>
                     </div>
                 </div>
+
+                <div id="result_to_self">
+                    <meta slide-id="result_to_self">
+                    <p id="post_results">
+
+                    </p>
+                </div>
             </div>
 
             <div id="extra_message" class="slider-box"></div>
@@ -80,9 +87,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="res/scripts/utils.js"></script>
     <script src="res/scripts/swiper.js"></script>
-    <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/ui_logic.js"></script>
+    <script src="res/scripts/auth.js"></script>
 </body>
 
 </html>
