--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <input id="datepicker" type="date" data-date-format="dd/mm/yyyy" onfocus="(this.type='date')" onblur="(this.type='text')">
+    <!--<input id="datepicker" type="date" data-date-format="dd/mm/yyyy" onfocus="(this.type='date')" onblur="(this.type='text')">-->
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
