--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
             <div style="display: none;">
                 <div id="error">
+                    <meta slide-id="error">
                     <h1 id="error_title">Errore 400</h1>
                     <p id="error_message">Richiesta Malformata, non è possibile continuare.</p>
                 </div>
