--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -3,42 +3,35 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mostra gli ordini</title>
-  <link rel="stylesheet" href="style.css" type='text/css' />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paninosoft | Ordini</title>
+  <link rel="stylesheet" href="res/styles.css" type='text/css' /> <!-- Nuovo file css -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
 </head>
 
 <body>
-  <script type="text/javascript" src="mostra_ordini.js"></script>
+
+  <header class="top-header">
+    <canvas class="logo-img"></canvas>
+    <span style="width: 20px;"></span>
+    <h1>Ordini</h1>
+  </header>
+
+
   <div class="root">
-    <div class="form-container">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h1>Ordini</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-body">
-                <p class="card-text">Lista degli ordini</p>
-                <ul id="myList"></ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul id="myList">
+    </ul>
+  </div>
+
     <!--<input id="datepicker" type="date" data-date-format="dd/mm/yyyy" onfocus="(this.type='date')" onblur="(this.type='text')">-->
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
+    <script type="text/javascript" src="mostra_ordini.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </body>
 
 </html>
