--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -18,9 +18,19 @@
     <h1>Ordini</h1>
   </header>
 
-
   <div class="root">
-    <ul id="myList">
+
+    <div class="controls">
+      <button class="button">
+        ←
+      </button>
+      <input id="datepicker" class="date-picker" type="date" />
+      <button class="button">
+        →
+      </button>
+    </div>
+
+    <ul id="lista_ordini">
     </ul>
   </div>
 
@@ -30,8 +40,8 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script> -->
-    <script type="text/javascript" src="mostra_ordini.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="mostra_ordini.js"></script>
 </body>
 
 </html>
