--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paninosoft | Ordini</title>
   <link rel="stylesheet" href="res/styles.css" type='text/css' /> <!-- Nuovo file css -->
+  <link rel="icon" type="image/x-icon" href="res/icon.ico">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
 </head>
