Login e passaggio alla dashboard

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
     <script src="res/scripts/swiper.js"></script>
     <script src="res/scripts/ui_logic.js"></script>
     <script src="res/scripts/auth.js"></script>
+    <script src="res/scripts/resumeSession.js"></script>
+    <script src="res/scripts/login.js"></script>
 </body>
 
 </html>
