aggiunta dashboard di fede

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+    <link rel="stylesheet" href="res/styles/dashboard.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
 </head>
+
 <body>
-    <div id="userID">0</div>
-    <button id="logout">Placeholder</button>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <script src="res/scripts/auth.js"></script>
-    <script src="res/scripts/resumeSession.js"></script>
-    <script src="res/scripts/dashboard.js"></script>
+    <div class="grid-container">
+        <header>
+            <img src="./logo.png" class="logo"></a>Dashboard Paninosoft
+        </header>
+        <main>
+            <button id="btnOrder">Ordini</button>
+            <button id="btnStorage">Magazzino</button>
+            <button id="btnUtent">Utenti</button>
+        </main>
+        <footer>Copyright ©PaninosoftSRL 2023</footer>
 </body>
+
 </html>
