Fix script e css dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,14 +13,19 @@
 <body>
     <div class="grid-container">
         <header>
-            <img src="./logo.png" class="logo"></a>Dashboard Paninosoft
+            <img src="res/styles/icon.png" class="logo"></a>Dashboard Paninosoft
         </header>
         <main>
             <button id="btnOrder">Ordini</button>
             <button id="btnStorage">Magazzino</button>
             <button id="btnUtent">Utenti</button>
+            <button id="btnLogout"></button>
         </main>
         <footer>Copyright ©PaninosoftSRL 2023</footer>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+        <script src="res/scripts/auth.js"></script>
+        <script src="res/scripts/resumeSession.js"></script>
+        <script src="res/scripts/dashboard.js"></script>
 </body>
 
 </html>
