--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -22,11 +22,11 @@
   <div class="root">
 
     <div class="controls">
-      <button class="button" onClick="increment()">
+      <button class="button" onClick="decrement()">
         ←
       </button>
-      <input id="datepicker" class="date-picker" type="date" onchange="handler(event);"/>
-      <button class="button" onClick="decrement()">
+      <input id="datepicker" class="date-picker" type="date" onchange="getDate();"/>
+      <button class="button" onClick="increment()">
         →
       </button>
     </div>
