--- a/dashboard.html
+++ b/dashboard.html
@@ -3,29 +3,48 @@
 
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="res/styles/dashboard.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="res/styles/icon.ico">
+    <title>Paninosoft | Dashboard</title>
+    
 </head>
 
 <body>
+
     <div class="grid-container">
+
         <header>
-            <img src="res/styles/icon.png" class="logo"></a>Dashboard Paninosoft
+            <img src="res/styles/icon.png" class="logo">Dashboard Paninosoft
+            <ul>
+                <li>
+                  <a href="#">Account▾</a>
+                  <ul class="dropdown">
+                   <li><a href="#">Opzione 1</a></li>
+                   <li><a href="#">Opzione 2</a></li>
+                   <li><a href="#">Opzione 3</a></li>
+                   <li><a href="#">Opzione 4</a></li>
+                  </ul>
+                  </li>
+             </ul>
         </header>
+
         <main>
             <button id="btnOrder">Ordini</button>
             <button id="btnStorage">Magazzino</button>
             <button id="btnUtent">Utenti</button>
             <button id="btnLogout"></button>
         </main>
-        <footer>Copyright ©PaninosoftSRL 2023</footer>
-        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-        <script src="res/scripts/auth.js"></script>
-        <script src="res/scripts/resumeSession.js"></script>
-        <script src="res/scripts/dashboard.js"></script>
+        <footer> Copyright ©PaninosoftSRL 2023</footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="res/scripts/auth.js"></script>
+    <script src="res/scripts/resumeSession.js"></script>
+    <script src="res/scripts/dashboard.js"></script>
 </body>
+
 
 </html>
