--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="res/styles/login.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
     <title>Paninosoft | Login</title>
-    <link rel="icon" type="image/x-icon" href="res/icon.ico">
+    <link rel="icon" type="image/x-icon" href="res/styles/icon.ico">
 </head>
 
 <body>
