introduzione altri tipi di ordini

--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -31,6 +31,13 @@
       </button>
     </div>
 
+    <ul id = "lista_botton">
+    <button class="button list-button" id="order_number" onClick="order_cases(1);">Ordini completati</button>
+    <button class="button list-button" id="order_number" onClick="order_cases(2);">Ordini da ritirare</button>
+    <button class="button list-button" id="order_number" onClick="order_cases(3);">Ordini annullato</button>
+    <button class="button list-button" id="order_number" onClick="order_cases(5);">Ordini ritirati</button>
+    </ul>
+
     <ul id="lista_ordini">
     </ul>
   </div>
