--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
                 <li>
                   <a href="#">Account▾</a>
                   <ul class="dropdown">
-                   <li><a href="#">Opzione 1</a></li>
-                   <li><a href="#">Opzione 2</a></li>
+                   <li><a id="manageAccount" href="account.html">Gestisci account</a></li>
+                   <li><a id="btnLogout" href="#">Logout</a></li>
                    <li><a href="#">Opzione 3</a></li>
                    <li><a href="#">Opzione 4</a></li>
                   </ul>
@@ -35,8 +35,7 @@
         <main>
             <button id="btnOrder">Ordini</button>
             <button id="btnStorage">Magazzino</button>
-            <button id="btnUtent">Utenti</button>
-            <button id="btnLogout"></button>
+            <button id="btnUsers">Utenti</button>
         </main>
         <footer> Copyright ©PaninosoftSRL 2023</footer>
     </div>
