(commit di @AndreaLavezzi) "manage account"
da web-auth

Co-Authored-By: Sandstorm <72445472+AndreaLavezzi@users.noreply.github.com>

--- a/account.html
+++ b/account.html
@@ -38,19 +38,19 @@
                 </div>
                 <div>
                     <h5 class="account-name">Nome</h5>
-                    <h4 id="name" class="info">Giancarlo</h4>
+                    <h4 id="name" class="info"></h4>
                 </div>
                 <div>
                     <h5 class="account-name">Cognome</h5>
-                    <h4 id="surname" class="info">Magalli</h4>
+                    <h4 id="surname" class="info"></h4>
                 </div>
                 <div>
                     <h5 class="account-name">Email</h5>
-                    <h4 id="email" class="info">giancarlo.magalli@iisviolamarchesini.edu.it</h4>
+                    <h4 id="email" class="info"></h4>
                 </div>
                 <div>
                     <h5 class="account-name">Ruolo</h5>
-                    <h4 id="role" class="info">Studente</h4>
+                    <h4 id="role" class="info"></h4>
                 </div>
             </div>
         </main>
