--- a/Venditore/mostra_ordini.html
+++ b/Venditore/mostra_ordini.html
@@ -15,8 +15,7 @@
 
   <header class="top-header">
     <canvas class="logo-img"></canvas>
-    <span style="width: 20px;"></span>
-    <h1>Ordini</h1>
+    <p>Ordini</p>
   </header>
 
   <div class="root">
