--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
     <div class="grid-container">
 
         <header>
-            <img src="res/styles/icon.png" class="logo">Dashboard Paninosoft
+            <img src="res/styles/icon.png" class="logo">Dashboard
             <ul>
                 <li>
                   <a href="#">Account▾</a>
