--- a/users.html
+++ b/users.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="res/styles/dashboard.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="res/styles/inventory.css">
+    <title>Paninosoft | Utenti</title>
     <style>
         #row li {
             display: inline;
@@ -27,20 +27,12 @@
 </head>
 
 <body>
-    <header>
-        <img src="res/styles/icon.png" class="logo">Dashboard Paninosoft
-        <ul>
-            <li>
-              <a href="#">Account▾</a>
-              <ul class="dropdown">
-               <li><a id="manageAccount" href="account.html">Gestisci account</a></li>
-               <li><a id="btnLogout" href="#">Logout</a></li>
-               <li><a href="#">Opzione 3</a></li>
-               <li><a href="#">Opzione 4</a></li>
-              </ul>
-              </li>
-         </ul>
+
+    <header class="top-header">
+        <canvas class="logo-img"></canvas>
+        <p>Utenti</p>
     </header>
+
     <div>
         <ul id="row">
             <li>Nome</li>
@@ -60,8 +52,6 @@
     <script src="res/scripts/auth.js"></script>
     <script src="res/scripts/resumeSession.js"></script>
     <script src="res/scripts/manageUsers.js"></script>
-
-    <footer> Copyright ©PaninosoftSRL 2023</footer>
 </body>
 
 </html>
